[gd_scene load_steps=6 format=2]

[ext_resource path="res://mine_one/MineOne.gd" type="Script" id=1]
[ext_resource path="res://mine_one/mine_one_body.png" type="Texture" id=2]
[ext_resource path="res://mine_one/mine_one_flap.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]

length = 2.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_body/Sprite_flat:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite_body/Sprite_flat:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, -0.934168 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 15, 15 )

[node name="MineOne" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
animation_speed_min = 0.125
animation_speed_max = 2.0
explosion_damage_min = 10
explosion_damage_max = 50

[node name="Sprite_body" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="Sprite_flat" type="Sprite" parent="Sprite_body" index="0"]

texture = ExtResource( 3 )
offset = Vector2( 8, -8 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/flap_animation = SubResource( 1 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

visible = false
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Mine_body_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


